<resources>
    <string name="app_name">NEX Launcher</string>
    <string name="open_app">open</string>
    <string name="smart_boost">Smart Boost</string>
    <string name="junk_cleaner">Junk Cleaner</string>
    <string name="task_manager">Task Manager</string>
    <string name="virus_scanner">Virus Scanner</string>
    <string name="ai_floating_touch">AI Floating Touch</string>
    <string name="app_traffic">App Traffic Control</string>
    <string name="screen_recorder_settings">Screen Recorder Settings</string>
    <string name="smart_boost_desc">Smart boost allows an app to utilise the CPU and GPU without any limitations. This will consume more battery power and disable other apps running in the background.</string>
    <string name="juck_cleaner_desc">Free up space by deleting thumbnails, uninstalled apks and cache.</string>
    <string name="task_manager_desc">View and stop background activities.</string>
    <string name="virus_scan_desc">Scan and remove threats to keep your phone secure.</string>
    <string name="app_traffic_desc">You decide which apps can use your mobile data and WiFi.</string>
    <string name="ai_floating_touch_desc">Predicts your needs based on usage. You can create custom shortcuts and also use gestures to navigate.</string>
    <string name="screen_recorder_settings_desc">Go to the settings page of Screen recorder.</string>
    <string name="intro">A launch pad for apps installed by Nokia Extensions.</string>
    <string name="help">Help</string>
    <string name="info">About</string>
    <string name="invert_theme">Theme</string>
    <string name="theme_bold"><b>Theme</b></string>
    <string name="home">Home</string>
    <string name="app_version">App Version</string>
    <string name="made_by">Made with 💙 by</string>
    <string name="my_name">Akilesh</string>
    <string name="dark_theme">Dark</string>
    <string name="apply_dark_theme">Apply dark theme to the app.</string>
    <string name="apply">Apply</string>
    <string name="light_theme">Light</string>
    <string name="apply_light_theme">Apply light theme to the app.</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="code_name">Code Name</string>
    <string name="build_version">Build Version</string>
    <string name="game_assistant">Game Assistant</string>
    <string name="game_assistant_desc">Enhance your gaming experience using Game Assistant.</string>
    <string name="battery">Set by Battery Saver</string>
    <string name="apply_auto_battery_theme">Apply dark theme automatically when battery saver is on.</string>
    <string name="followSystem">Use system default</string>
    <string name="apply_system_night_mode">Apply default night mode of the device.</string>
    <string name="current_night_mode">Current Theme</string>
    <string name="skuid">Skuid</string>
    <string name="nokia_extensions">Nokia Extensions</string>
    <string name="support">Support</string>
    <string name="xda">XDA Thread</string>
    <string name="telegram_group">Telegram group</string>
    <string name="doc">Documentation</string>
    <string name="readme">Read Me</string>
    <string name="nex_version">Module Version</string>
    <string name="settings">Settings</string>
    <string name="security_patch">Android Security Patch</string>
    <string name="vendor_security_patch">Vendor Security Patch</string>
    <string name="follow_me">Follow Me</string>
    <string name="twitter">Twitter</string>
    <string name="follow_ln">Follow LoveNokia</string>
    <string name="blog">Blog</string>
    <string name="fb">Facebook</string>
    <string name="face_unlock">Face Unlock</string>
    <string name="face_unlock_desc">Unlock with a glance. Just lift the phone to unlock, even when the screen is off. Find it under device security settings.</string>
    <string name="ota_update_link">OTA Update Link</string>
    <string name="hint">Long press the link for more actions.</string>
    <string name="system_update">System Update</string>
    <string name="glance_screen">Glance Screen</string>
    <string name="glance_screen_desc">An enhanced version of ambient display with more features.</string>
    <string name="gestures">Gestures</string>
    <string name="gestures_desc">Quick gestures to control your phone.</string>
    <string name="slot">Active slot</string>
    <string name="build_fingerprint">Build Fingerprint</string>

</resources>
