<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:paddingTop="8.0dip"
        android:paddingBottom="72.0dip"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_ai"
                    android:text="@string/ai_floating_touch" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/ai_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/ai_floating_touch_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_fw"
                    android:text="@string/app_traffic" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/fw_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/app_traffic_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_face"
                    android:text="@string/face_unlock" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/face_unlock"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/face_unlock_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_game"
                    android:text="@string/game_assistant" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/ga_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/game_assistant_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_gesture"
                    android:text="@string/gestures" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/ges_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/gestures_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_notifications"
                    android:text="@string/glance_screen" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/gl_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/glance_screen_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_delete_sweep"
                    android:text="@string/junk_cleaner" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/jc_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/juck_cleaner_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_settings_16dp"
                    android:text="@string/screen_recorder_settings" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sr_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/screen_recorder_settings_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_smart_boost"
                    android:text="@string/smart_boost" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sb_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/smart_boost_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_tm"
                    android:text="@string/task_manager" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tm_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/task_manager_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    app:drawableStartCompat="@drawable/ic_security"
                    android:text="@string/virus_scanner" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/vs_desc"
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:text="@string/virus_scan_desc"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>