<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.core.widget.NestedScrollView
        android:paddingTop="8.0dip"
        android:paddingBottom="72.0dip"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/brand" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/brand"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/model" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/model"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/code_name" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/codeName"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/build_version" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards"
                    android:id="@+id/buildVersionCard">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/buildVersion"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/build_fingerprint" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards"
                    android:id="@+id/buildFingerprintCard">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/buildFingerprint"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/slot" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/slot"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>


            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/skuid" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/skuid"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/security_patch" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/asp"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <FrameLayout
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/CardHeaders"
                    android:text="@string/vendor_security_patch" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Cards">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Text"
                        android:id="@+id/vsp"/>
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>