<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?actionBarSize"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="50dp">


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        app:cardBackgroundColor="@color/background"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:fontFamily="@font/nokia_pure"
            android:text="@string/nokia_extensions"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"/>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="140dp"
        app:cardBackgroundColor="@color/background"
        app:cardUseCompatPadding="true">
        <TableLayout
            android:background="@color/background"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/ver_heading"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:background="@color/background"
                android:fontFamily="@font/nokia_pure"
                android:text="@string/app_version"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/nokia_pure"
                android:background="@color/background"
                android:textSize="18sp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background" />


            <TextView
                android:id="@+id/dev_heading"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nokia_pure"
                android:textSize="18sp"
                android:background="@color/background"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:text="@string/made_by"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/nokia_pure"
                android:textColor="?android:attr/textColorPrimary"
                android:background="@color/background"
                android:text="@string/my_name"
                android:textSize="18sp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background" />

        </TableLayout>
    </com.google.android.material.card.MaterialCardView>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:background="@color/background"
                android:layout_height="8dp"/>

        </LinearLayout>

</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>